[gd_scene load_steps=2 format=3 uid="uid://cmty10gu8bepm"]

[ext_resource type="Script" uid="uid://ghbsoob1ccnt" path="res://ui/settings_container.gd" id="1_3asl5"]

[node name="SettingsContainer" type="CenterContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -52.5
offset_right = 146.0
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3asl5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "MUSIC"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "DISABLE"

[node name="MusicCheckBox" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Return" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MENU_RETURN"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
